@@ -26,79 +26,78 @@ namespace LHAPDF {
   }
 
 
-
-  inline void tokenize(const string& line, vector<double>& knots) {
-    size_t start = 0;
-    size_t pos = 0;
-    do {
-      pos = line.find_first_of( " ", start );
-      knots.push_back( atof( line.substr( start, (pos - start) ).c_str() ) );
-      start = pos+1;
-    } while (pos != string::npos);
+  PDFGrid PDFGrid::load(const string& filepath) {
+    ifstream file(filepath.c_str());
+    return PDFGrid::load(file);
   }
 
 
+  PDFGrid PDFGrid::load(istream& file) {
+    /// @todo First create a PDFInfo object to parse the top part (and to cascade up to the set info and the global config)
 
-  /// @todo Should just be a filename as argument: why expose YAML or pass a PDFGrid?
-  PDFGrid* PDFGrid::load( PDFGrid* grid, const YAML::Node& head, ifstream& file) {
-    // Parse grid knots
-    /// @todo Replace with a special vector<double> specialisation of PDF::metadata()?
-    for (YAML::Iterator xsit = head["Xs"].begin(); xsit != head["Xs"].end(); ++xsit) {
-      double x;
-      (*xsit) >> x;
-      grid->_xknots.push_back(x);
-    }
-    /// @todo Replace with a special vector<double> specialisation of PDF::metadata()?
-    for (YAML::Iterator q2sit = head["Q2s"].begin(); q2sit != head["Q2s"].end(); ++q2sit) {
-      double q2;
-      (*q2sit) >> q2;
-      grid->_q2knots.push_back(q2);
-    }
+    /// @todo The knots are now part of each subgrid rather than the YAML metadata
+    // // Parse grid knots
+    // /// @todo Replace with a special vector<double> specialisation of PDF::metadata()?
+    // for (YAML::Iterator xsit = head["Xs"].begin(); xsit != head["Xs"].end(); ++xsit) {
+    //   double x;
+    //   (*xsit) >> x;
+    //   grid->_xknots.push_back(x);
+    // }
+    // /// @todo Replace with a special vector<double> specialisation of PDF::metadata()?
+    // for (YAML::Iterator q2sit = head["Q2s"].begin(); q2sit != head["Q2s"].end(); ++q2sit) {
+    //   double q2;
+    //   (*q2sit) >> q2;
+    //   grid->_q2knots.push_back(q2);
+    // }
 
-    // Parse grid data
-    // Allocate knot arrays
+    PDFGrid rtn; //< The return value to-be
 
-    for (vector<PID_t>::const_iterator fl = grid->flavors().begin(); fl != grid->flavors().end(); ++fl) {
-      /// @todo Remember to call delete[] when destructing...
-      grid->_ptdata[*fl] = new double[grid->xKnots().size() * grid->q2Knots().size()];
-    }
-
-    // Parse grid lines
-    size_t cline = 0;
-    for (; cline < grid->xKnots().size()*grid->q2Knots().size(); ++cline) {
-      // Read a line
-      if (!file.good()) {
-        stringstream error;
-        error << "ifstream ran out of data @ " << cline;
-        throw ReadError(error.str());
-      }
-      string line;
-      getline(file, line);
-
-      // Parsing individual grid line
-      const char* cstr = line.c_str();
-      char str[line.size()+1];  /// @todo Not ISO C++. Fix!
-      memcpy( str, cstr, (line.size()+1)*sizeof(char) );
-
-      char *token, *prog;
-      unsigned int flavor = 0;
-      token = strtok_r( str, " ", &prog );
-      while (token != NULL) {
-        // Process token
-        /// @todo Massively fix and improve...
-        // AB tmp disable: grid->_ptdata[grid->_set->flavors()[flavor]][cline] = atof( token );
-        token = strtok_r(NULL, " ", &prog);
-        ++flavor;
+    string line;
+    int iblock(0), iline(0);
+    vector<double> xs, q2s;
+    const size_t npid = 11; /// @todo For 5q + g PDFs. Convert to info().flavors().size() once info system exists
+    vector< vector<double> > ipid_xfs(npid);
+    while (getline(file, line)) {
+      iline += 1;
+      if (iblock > 0) { // Block 0 is the metadata, which we ignore here
+        double token;
+        istringstream tokens(line);
+        if (iline == 1) { // x knots line
+          while (tokens >> token) xs.push_back(token);
+        } if (iline == 2) { // Q2 knots line
+          while (tokens >> token) q2s.push_back(token);
+        } else {
+          if (iline == 3) { // on the first line of the xf block, resize the arrays
+            for (size_t ipid = 0; ipid < npid; ++ipid) { ipid_xfs[ipid].reserve(xs.size() * q2s.size()); }
+          }
+          int ipid = 0;
+          while (tokens >> token) {
+            ipid_xfs[ipid].push_back(token);
+            ipid += 1;
+          }
+        }
+      } else if (line == "---") { // This is the block divider line
+        iblock += 1;
+        iline = 0;
+        KnotArrayNF& arraynf = rtn._knotarrays[q2s.front()]; //< Reference to newly created subgrid on the return object
+        for (size_t ipid = 0; ipid < npid; ++ipid) {
+          PID_t pid = ipid; //< @todo Replace with info().flavors()[ipid]; when info() works
+          arraynf[pid] = KnotArray1F(xs, q2s); // create the 2D array with the x and Q2 knot positions
+          arraynf[pid].xfs().assign(ipid_xfs[ipid].begin(), ipid_xfs[ipid].end()); // populate the xf array
+        }
+        xs.clear(); q2s.clear(); ipid_xfs.clear();
       }
     }
 
     // Set default inter/extrapolators
     /// @todo Re-enable when the info system is sorted out
     // const string ipolname = metadata("Interpolator");
-    // grid->setInterpolator(ipolname);
+    // rtn.setInterpolator(ipolname);
     // const string xpolname = metadata("Extrapolator");
-    // grid->setExtrapolator(xpolname);
+    // rtn.setExtrapolator(xpolname);
 
-    return grid;
+    return rtn;
   }
+
+
 }
